# qpd

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
checks/: check_readout_window.py
docs/: design_para.md  materials.md  theory.md
docs/epr/: 01-full-hamiltonian.md  02-eq6-to-eq7.md  03-validity-tiny-field.md  04-eq11-eq12-consistency.md  05-chi-as-dispersive-shift.md  06-ac-stark-in-eq8.md  07-chi-ND-vs-perturbation.md  08-H_ND-in-kerr-form.md  09-chi-ND-labeling-bias.md  10-why-dressed-states-differ.md  11-measured-vs-chiND.md  12-bare-vs-dressed-frequencies.md  13-extracting-parameters-summary.md  14-kerr-hamiltonian-intro.md  15-lamb-shift-physical-origin.md  16-extracting-EJ-EC.md  17-rabi-model-approximations.md  18-beyond-dipole-coupling-and-hfss.md  19-q3d-lom-analysis.md  README.md  render_eqs.py
examples/: example_capacitance.py  example_materials.py  example_readout_window.py  example_simulator.py  example_usage.py
notebooks/: catelani.ipynb  qpd.ipynb  qpd_cqed.ipynb  qpd_jc.ipynb  quantum_capacitance.ipynb  readout_inversion.ipynb  simulation.ipynb  std_analysis.ipynb
ocs/: MATERIALS_GUIDE.md  QUICK_START.md  README.md  example_materials.py  example_usage.py  materials.yaml  ocs.ipynb  ocs.mplstyle  ocs_transmon.py  requirements.txt  std_analysis.ipynb
scripts/: generate_mle_dataset.py
src/qpd/: __init__.py
src/qpd/mlebench/: README.md  __init__.py  config.py  generate.py  grade.py
src/qpd/simulator/: __init__.py  noise.py  offset_charge.py  parity.py  quasiparticle_bursts.py  resonator.py  vna_simulator.py
src/qpd/theory/: __init__.py  driven.py  readout.py  transmon.py
