[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "qpd"
version = "0.1.0"
description = "QPD Transmon qubit simulation library"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.3",
    "pyyaml>=5.4",
    "iminuit>=2.20",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"qpd.theory" = ["materials.yaml", "qpd.mplstyle"]
