[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "qpd"
version = "0.1.0"
description = "QPD Transmon qubit simulation library"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "matplotlib>=3.3",
    "pyyaml>=5.4",
    "iminuit>=2.20",
]

[project.optional-dependencies]
# Open-system driven-dissipative solver backend (QuTiP). QuTiP 5 supplies
# Qobj/tensor/destroy/qeye/steadystate/expect/liouvillian for src/qpd/theory/driven.py.
# QuTiP 5 requires numpy>=1.22, scipy>=1.8 (the base floors are bumped to match). 5.3+ preferred.
open = ["qutip>=5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"qpd.theory" = ["materials.yaml", "qpd.mplstyle"]
